IDEA-273018 Splash-Screen rounded corners
GitOrigin-RevId: 75bb5e8e9200f28d581dde50f789f2281e0bd116